
             • add 'call' to data output object,

             • add 'UID' column to data object 'De.values' and
               'rejection.criteria',

             • if the function is not able to proceed to due to unequal
               number of OSL curves the analysis will no longer break
               with an error. Instead ‘NULL’ is returned. This allows
               to use the function more efficiently in a loop.

         • ‘calc_SourceDoseRate()’

             • Function now returns the original function call as
               data.object,

             • argument ‘predict’ added to allow for source dose rate
               prediction in days,

             • adding plotting method for object output, available via
               (‘plot_RLum’),

             • extend examples.

         • ‘calc_Statistics()’

             • Weighted median is now completly removed from the
               calculation, values is replaced by the unweighted
               median.

         • ‘fit_LMCurve()’

             • Argument ‘output.plot’ renamed to ‘plot’,

             • argument ‘output.plotBG’ renamed to ‘plot.BG’,

             • arguemtn ‘output.terminal’ renamed to ‘verbose’,

             • argument ‘output.path’ removed without replacement,
               corresponding code has been removed from the function,

             • argument ‘cex.global’ removed, scaling can be still used
               via ‘cex’

             • argument ‘output.terminaladvanced’ has been removed
               without replacement, terminal output can just be
               triggered via ‘verbose’,

             • new argument added ‘fit.method’. Argument works similar
               as in ‘fit_CWCurve()’ and allows to use the
               Levenberg-Marquardt algorithm for fitting (addressing
               #55)

             • new return data object added ‘call’ containing the
               original function call.

         • ‘merge_RLum()’
