@@ -103,7 +103,7 @@
 </td>
 <td class=cellinside>2015-08-30
 </td>
-<td class=cellinside>19:23:01
+<td class=cellinside>20:26:22
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France)<br />  R Luminescence Package Team
@@ -1020,11 +1020,11 @@
 </td>
 <td class=cellinside><br /> The function provides a standardised plot output for dose recovery test<br /> measurements.<br />
 </td>
-<td class=cellinside>0.1.6
+<td class=cellinside>0.1.7
 </td>
-<td class=cellinside>2015-08-21
+<td class=cellinside>2015-08-30
 </td>
-<td class=cellinside>14:53:14
+<td class=cellinside>20:23:42
 
 </td>
 <td class=cellinside><br /> Sebastian Kreutzer, IRAMAT-CRP2A, Universite Bordeaux Montaigne<br /> (France), Michael Dietze, GFZ Potsdam (Germany)<br />  R Luminescence Package Team
