@@ -53,7 +53,9 @@
         \item add 'UID' column to data object 'De.values' and 'rejection.criteria',
         \item if the function is not able to proceed to due to unequal number of OSL curves the
         analysis will no longer break with an error. Instead \code{NULL} is returned. This allows
-        to use the function more efficiently in a loop.
+        to use the function more efficiently in a loop,
+        \item improve behaviour if wrong background integrals are provided, even the values make
+        no sense the functions tries to do the best without breaking.
 
       }
 
@@ -112,6 +114,14 @@
        \itemize{
 
         \item Further adjustment to deal with zero values (will now be removed automatically)
+
+
+      }
+
+     \item \code{plot_DRTResults()}
+       \itemize{
+
+        \item Function struggled with RLum.Results objects as input; corrected.
 
 
       }
