@@ -67,7 +67,11 @@ Changes in version 0.5.0 (, 2015):
              • if the function is not able to proceed to due to unequal
                number of OSL curves the analysis will no longer break
                with an error. Instead ‘NULL’ is returned. This allows
-               to use the function more efficiently in a loop.
+               to use the function more efficiently in a loop,
+
+             • improve behaviour if wrong background integrals are
+               provided, even the values make no sense the functions
+               tries to do the best without breaking.
 
          • ‘calc_SourceDoseRate()’
 
@@ -123,6 +127,11 @@ Changes in version 0.5.0 (, 2015):
 
              • Further adjustment to deal with zero values (will now be
                removed automatically)
+
+         • ‘plot_DRTResults()’
+
+             • Function struggled with RLum.Results objects as input;
+               corrected.
 
          • ‘plot_GrowthCurve()’
 
